Ajuste nome de projeto

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "jhonymiler/lero-lero",
+    "name": "jhonymiler/lerolero",
     "description": "Pacote para gerar frases para preenchimento Lorem",
     "license": "MIT",
     "autoload": {
